Bug #9/#6, Initial implementation of user authentication via Passport
* Using HTTP Basic authentication, and JS-file based user management

--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,14 @@ input:focus {
   outline-offset: .4rem;
 }
 
+#logout-button {
+  font-size: 1.3rem;
+  position: absolute;
+  padding: .5rem 1rem;
+  right: 0;
+  top: 0;
+}
+
 .wc-loading {
   font-size: 2.6rem;
   font-style: italic;
